--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,22 +70,23 @@ textarea {
   width: 50px;
 }
 
+.past, .present, .future {
+  flex-grow: 3;
+}
+
 .past {
   background-color: #d3d3d3;
   color: white;
-  flex-grow: 3;
 }
 
 .present {
   background-color: #ff6961;
   color: white;
-  flex-grow: 3;
 }
 
 .future {
   background-color: #77dd77;
   color: white;
-  flex-grow: 3;
 }
 
 .saveBtn {
